<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_dark">

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:src="@drawable/ic_launcher_foreground"
        app:tint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />
    <TextView
        android:id="@+id/tvPageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_add_transaction"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/btnBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnBack" />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_white_rounded_top"
        android:padding="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPageTitle">
        <LinearLayout
            android:id="@+id/layoutType"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/bg_input_rounded"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintTop_toTopOf="parent">
            <TextView
                android:id="@+id/btnIncome"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/text_income"
                android:textStyle="bold"
                android:textColor="@color/gray_text" />
            <TextView
                android:id="@+id/btnExpense"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/text_expense"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:background="@drawable/bg_input_rounded"
                android:backgroundTint="@color/expense_red"/>
        </LinearLayout>
        <TextView
            android:id="@+id/labelDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_date"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutType"/>
        <EditText
            android:id="@+id/etDate"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:focusable="false"
            android:clickable="true"
            tools:text="27-12-2025"
            app:layout_constraintTop_toBottomOf="@id/labelDate"/>
        <TextView
            android:id="@+id/labelAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_amount"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etDate"/>
        <EditText
            android:id="@+id/etAmount"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:inputType="numberDecimal"
            app:layout_constraintTop_toBottomOf="@id/labelAmount"/>
        <TextView
            android:id="@+id/labelCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_category"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etAmount"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilCategory"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeColor="@android:color/transparent"
            app:layout_constraintTop_toBottomOf="@id/labelCategory">
            <AutoCompleteTextView
                android:id="@+id/etCategory"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:text="Lainnya" />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:id="@+id/labelNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_note"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilCategory"/>
        <EditText
            android:id="@+id/etNote"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/hint_note"
            app:layout_constraintTop_toBottomOf="@id/labelNote"/>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_save"
            android:backgroundTint="@color/black"
            app:tint="@color/white"
            android:layout_marginTop="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_delete"
            android:backgroundTint="@color/expense_red"
            app:tint="@color/white"
            android:visibility="gone"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            app:fabSize="mini"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnSave" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>